# wildcard-multi-FSPBWT

./: CMakeLists.txt  README.md  main.cpp  tools.h  wmFSPBWT.h
